--- a/gc.html
+++ b/gc.html
@@ -54,8 +54,17 @@
     <!-- This is the normal page -->
     <div id='page'>
       <!-- The left-page has the SVG container and canvas -->
-      <div id='left-page'></div>
-
+      <div id='left-page'>
+      <div id='graph-part'></div>
+      <div id='relate-topic'>
+      	<p id='relate-topic-content'> relate topic:
+       </p>
+      </div>
+      <div id='relate-word'>
+       	<p> relate word:
+       </p>
+      </div>
+  	  </div>
       <!-- The right page is the side bar -->
       <div id='right-page'>
       	<div id='search-box'>
