--- a/gc.html
+++ b/gc.html
@@ -57,11 +57,11 @@
       <div id='left-page'>
       <div id='graph-part'></div>
       <div id='relate-topic'>
-      	<p id='relate-topic-content'> relate topic:
+      	<p id='relate-topic-content'>
        </p>
       </div>
       <div id='relate-word'>
-       	<p> relate word:
+      	<p id='relate-word-content'>
        </p>
       </div>
   	  </div>
