--- a/gc.html
+++ b/gc.html
@@ -64,6 +64,8 @@
       	<p id='relate-word-content'>
        </p>
       </div>
+      <div id='current-describe' class = 'current-describe'>
+      </div>
   	  </div>
       <!-- The right page is the side bar -->
       <div id='right-page'>
