--- a/compare.html
+++ b/compare.html
@@ -15,13 +15,13 @@
         <div id='graph-part'></div>
         <div id='setboxA' class = 'setboxA'>
           <span class='text'>Set words A :  </span>       
-          <input id = 'set-word-A'></input>
-          <button onClick="javaScript:void(0)">Set Words A</button>
+          <input id = 'set-word-A' value = 'svm'></input>
+          <button onClick="GC.Node.searchA()">Set Words A</button>
         </div>
         <div id='setboxB' class = 'setboxB'>
           <span class='text'>Set words B :  </span>       
-          <input id = 'set-word-B'></input>
-          <button onClick="javaScript:void(0)">Set Words B</button>
+          <input id = 'set-word-B' value = 'classifiers'></input>
+          <button onClick="GC.Node.searchB()">Set Words B</button>
         </div>
   	  </div>
       <!-- The right page is the side bar -->
