--- a/test.html
+++ b/test.html
@@ -1,180 +1,174 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+  <head>
     <meta charset="utf-8">
-    <title>画一个折线图</title>
-    <script type="text/javascript" src="js/d3.v3.min.js"></script>
-</head>
-<style type="text/css">
-    body{
-        height: 100%;
-        
-    }
-    .axis path,
-    .axis line {
-        fill: none;
-        stroke: black;
-        shape-rendering: crispEdges;
-    }
 
-    .axis text {
-        font-family: sans-serif;
-        font-size: 11px;
-    }
-</style>
-<body>
-<script type="text/javascript">
-	var dataset=[];	
-	var xMarks=[];
-	var w=600;
-	var h=400;
-	var padding=40;
-	
-	//模拟数据
-	getData();	
-	
-	//定义画布
-	var svg=d3.select("body")
-	.append("svg")
-	.attr("width",w)
-	.attr("height",h);
-	
-	//添加背景
-	svg.append("g")
-	.append("rect")
-	.attr("x",0)
-	.attr("y",0)
-	.attr("width",w)
-	.attr("height",h)
-	.style("fill","#FFF")
-	.style("stroke-width",2)
-	.style("stroke","#E7E7E7");	
-	
-	//横坐标轴比例尺	
-	var xScale = d3.scale.linear()
-		.domain([0,dataset.length-1])
-		.range([padding,w-padding]);	
-		
-	//纵坐标轴比例尺
-	var yScale = d3.scale.linear()
-		.domain([0,d3.max(dataset)])
-		.range([h-padding,padding]);
-	
-	//定义横轴
-	var xAxis = d3.svg.axis()
-            .scale(xScale)	
-            .orient("bottom").ticks(dataset.length);
-			
-	//添加横坐标轴并通过编号获取对应的横轴标签
-    var xBar=svg.append("g")
-            .attr("class", "axis")
-            .attr("transform", "translate(0," + (h - padding) + ")")
-            .call(xAxis)
-	xBar.selectAll("text")
-				.text(function(d){return xMarks[d];});
-	
-	//定义纵轴
-	var yAxis = d3.svg.axis()
-            .scale(yScale)
-            .orient("left").ticks(10);
+    <title>Tree Example</title>
 
-	//添加纵轴
-    var yBar=svg.append("g")
-			.attr("class", "axis")
-			.attr("transform", "translate("+padding+",0)")
-			.call(yAxis);		 	
+    <style>
 	
-	//添加折线
-	var line = d3.svg.line()
-        .interpolate("monotone")
-		.x(function(d,i){return xScale(i);})
-        .y(function(d){return yScale(d);});
-	
-	var path=svg.append("path")
-        .attr("d", line(dataset))
-		.style("fill","#F00")
-		.style("fill","none")
-		.style("stroke-width",1)
-		.style("stroke","#F00")
-		.style("stroke-opacity",0.9);
-	
-	//添加系列的小圆点
-	svg.selectAll("circle")
-	.data(dataset)
-	.enter()
-	.append("a")
-    .attr("xlink:href", "http://www.google.com")
-	.append("circle")
-	.attr("cx", function(d,i) {
-			return xScale(i);
-	})  
-	.attr("cy", function(d) {
-			return yScale(d);  
-	})  
-	.attr("r",5)
-	.attr("fill","#09F");			
-	
-	//重新作图
-	function drawChart()
-	{
-		var oldData = dataset;
-		getData();
-		var newLength = dataset.length;
-		var _duration = 1000;
-//		oldData = oldData.slice(0,dataset.length);
-		var circle = svg.selectAll("circle").data(oldData);
-		circle.exit().remove();
-		svg.selectAll("circle")
-		.data(dataset)
-		.enter()
-		.append("a")
-    	.attr("xlink:href", "http://www.google.com")
-		.append("circle")
-		.attr("cx", function(d,i){
-			return xScale(i);
-		})  
-		.attr("cy",function(d,i){
-			return yScale(d);
-		})  
-		.attr("r",5)
-		.attr("fill","#09F");
-		xScale.domain([0,newLength-1]);		
-		xAxis.scale(xScale).ticks(newLength);
-		xBar.transition().duration(_duration).call(xAxis);
-		xBar.selectAll("text").text(function(d){return xMarks[d];});
-		yScale.domain([0,d3.max(dataset)]);				
-		yBar.transition().duration(_duration).call(yAxis);
-		path.transition().duration(_duration).attr("d",line(dataset));
-		//重绘4圆点	
-		svg.selectAll("a")
-		.attr("xlink:href", function(d,i) {return i.toString();});
-		svg.selectAll("circle")		
-		.transition()
-        .duration(_duration)
-		.attr("cx", function(d,i) {				
-				return xScale(i);
-		})  
-		.attr("cy", function(d) {
-				return yScale(d);  
-		})	
+	.node {
+		cursor: pointer;
+	}
+
+	.node circle {
+	  fill: #fff;
+	  stroke: steelblue;
+	  stroke-width: 3px;
+	}
+
+	.node text {
+	  font: 12px sans-serif;
+	}
+
+	.link {
+	  fill: none;
+	  stroke: #ccc;
+	  stroke-width: 2px;
 	}
 	
-	//产生随机数据
-	function getData()
-	{		
-		var dataNum=Math.round(Math.round(Math.random()*10))+5;
+    </style>
 
-		dataset=[];
-		xMarks=[];
-		for(i=1;i<dataNum;i++)
-		{
-			dataset.push(Math.round(Math.random()*h));
-			xMarks.push("标签"+i);
-		}		
-	}		
+  </head>
+
+  <body>
+
+<!-- load the d3.js library -->	
+<script src="http://d3js.org/d3.v3.min.js"></script>
+	
+<script>
+
+var treedata = [
+  {
+    "name": "Top Level",
+    "parent": "null",
+    "children": [
+      {
+        "name": "Level 2: A",
+        "parent": "Top Level",
+        "children": [
+          {
+            "name": "Son of A",
+            "parent": "Level 2: A"
+          },
+          {
+            "name": "Daughter of A",
+            "parent": "Level 2: A"
+          }
+        ]
+      },
+      {
+        "name": "Level 2: B",
+        "parent": "Top Level"
+      }
+    ]
+  }
+];
+
+
+// ************** Generate the tree diagram	 *****************
+var margin = {top: 20, right: 120, bottom: 20, left: 120},
+	width = 960 - margin.right - margin.left,
+	height = 500 - margin.top - margin.bottom;
+	
+var i = 0,
+	duration = 750,
+	root;
+
+var tree = d3.layout.tree()
+	.size([height, width]);
+
+var diagonal = d3.svg.diagonal()
+	.projection(function(d) { return [d.y, d.x]; });
+
+var svg = d3.select("body").append("svg")
+	.attr("width", width + margin.right + margin.left)
+	.attr("height", height + margin.top + margin.bottom)
+  .append("g")
+	.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+
+var name = new Array();
+name["Top Level"] = "yes";
+root = treedata[0];
+root.x0 = height / 2;
+root.y0 = 0;
+  
+update(root,treedata);
+
+function update(source,treedata) {
+
+  // Compute the new tree layout.
+  var nodes = tree.nodes(source).reverse(),
+	  links = tree.links(nodes);
+
+  // Update the nodes…
+  var node = svg.selectAll("g.node")
+	  .data(nodes, function(d) { return d.id || (d.id = ++i); });
+
+  // Enter any new nodes at the parent's previous position.
+  var nodeEnter = node.enter().append("g")
+	  .attr("class", "node")
+	  .attr("transform", function(d) { return "translate(" + source.y0 + "," + source.x0 + ")"; })
+	  .on("click", click);
+
+  nodeEnter.append("circle")
+	  .attr("r", 1e-6)
+	  .style("fill", function(d) { return d._children ? "lightsteelblue" : "#fff"; });
+
+  nodeEnter.append("text")
+	  .attr("x", function(d) { return d.children || d._children ? -13 : 13; })
+	  .attr("dy", ".35em")
+	  .attr("text-anchor", function(d) { return d.children || d._children ? "end" : "start"; })
+	  .text(function(d) { return d.name; })
+	  .style("fill-opacity", 1e-6);
+
+  // Transition nodes to their new position.
+
+  nodeEnter.selectAll("circle")
+	  .attr("r", function(d){
+	  	if (d.name == "Top Level") return 20; else return 10;
+	  });
+
+  var nodeUpdate = node.transition()
+	  .duration(duration)
+	  .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; });
+  nodeUpdate.select("text")
+	  .style("fill-opacity", 1);
+
+  // Update the links…
+  var link = svg.selectAll("path.link")
+	  .data(links, function(d) { return d.target.id; });
+
+  // Enter any new links at the parent's previous position.
+  link.enter().insert("path", "g")
+	  .attr("class", "link")
+	  .attr("d", function(d) {
+		var o = {x: source.x0, y: source.y0};
+		return diagonal({source: o, target: o});
+	  });
+
+  // Transition links to their new position.
+  link.transition()
+	  .duration(duration)
+	  .attr("d", diagonal);
+
+}
+
+// Toggle children on click.
+function click(d) {
+  if (d.children) {
+	d._children = d.children;
+	d.children = null;
+  } else {
+	d.children = d._children;
+	d._children = null;
+  }
+  update(d);
+}
+
+// Toggl
+
 </script>
-<p align="left">
-<button onClick="javascript:drawChart();">刷新数据</button>
-</p>
-</body>
+	
+  </body>
 </html>
