--- a/compare.html
+++ b/compare.html
@@ -12,7 +12,6 @@
     <div id='page'>
       <!-- The left-page has the SVG container and canvas -->
       <div id='left-page'>
-        <div id='graph-part'></div>
         <div id='setboxA' class = 'setboxA'>
           <span class='text'>Set words A :  </span>       
           <input id = 'set-word-A' value = 'svm'></input>
@@ -20,9 +19,10 @@
         </div>
         <div id='setboxB' class = 'setboxB'>
           <span class='text'>Set words B :  </span>       
-          <input id = 'set-word-B' value = 'classifiers'></input>
+          <input id = 'set-word-B' value = 'software'></input>
           <button onClick="GC.Node.searchB()">Set Words B</button>
         </div>
+        <div id='graph-part'></div>
   	  </div>
       <!-- The right page is the side bar -->
       <div id='right-page'>
