--- a/compare.html
+++ b/compare.html
@@ -14,7 +14,7 @@
       <div id='left-page'>
         <div id='setboxA' class = 'setboxA'>
           <span class='text'>Set words A :  </span>       
-          <input id = 'set-word-A' value = 'svm'></input>
+          <input id = 'set-word-A' value = 'project'></input>
           <button onClick="GC.Node.searchA()">Set Words A</button>
         </div>
         <div id='setboxB' class = 'setboxB'>
