--- a/test.html
+++ b/test.html
@@ -42,24 +42,51 @@ var treedata = [
   {
     "name": "Top Level",
     "parent": "null",
+    "mark" : 0,
     "children": [
       {
         "name": "Level 2: A",
         "parent": "Top Level",
+        "mark" : 1,
         "children": [
           {
             "name": "Son of A",
-            "parent": "Level 2: A"
+            "parent": "Level 2: A",
+            "mark" : 1
           },
           {
             "name": "Daughter of A",
-            "parent": "Level 2: A"
+            "parent": "Level 2: A",
+            "mark" : 1
           }
         ]
       },
       {
         "name": "Level 2: B",
-        "parent": "Top Level"
+        "parent": "Top Level",
+        "mark" : 1
+      },
+      {
+        "name": "Level 2: A",
+        "parent": "Top Level",
+        "mark" : 2,
+        "children": [
+          {
+            "name": "Son of A",
+            "parent": "Level 2: A",
+            "mark" : 2
+          },
+          {
+            "name": "Daughter of A",
+            "parent": "Level 2: A",
+            "mark" : 2
+          }
+        ]
+      },
+      {
+        "name": "Level 2: B",
+        "parent": "Top Level",
+        "mark" : 2
       }
     ]
   }
@@ -76,29 +103,81 @@ var i = 0,
 	root;
 
 var tree = d3.layout.tree()
-	.size([height, width]);
+	.size([300, 300]);
 
 var diagonal = d3.svg.diagonal()
 	.projection(function(d) { return [d.y, d.x]; });
 
 var svg = d3.select("body").append("svg")
-	.attr("width", width + margin.right + margin.left)
-	.attr("height", height + margin.top + margin.bottom)
-  .append("g")
+	.attr("width", 800)
+	.attr("height", 800)
+  	.append("g")
 	.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
 var name = new Array();
 name["Top Level"] = "yes";
 root = treedata[0];
-root.x0 = height / 2;
-root.y0 = 0;
+root.x0 = 300;
+root.y0 = 300;
   
 update(root,treedata);
+
+function calc_new_coord(node, low, width, inter)
+{
+	if (node.children == undefined)
+		return;
+	var cnt1 = 0;
+	var cnt2 = 0;
+	for (var i = 0; i < node.children.length; i++)
+	{
+		if (node.children[i].mark == 1)
+			cnt1 +=1;
+		else
+			cnt2 +=1;
+	}
+	if (cnt1 != 0)
+	{
+		var winter = width/cnt1;
+		cnt1 = 0;
+		for (var i = 0; i < node.children.length; i++)
+			if (node.children[i].mark == 1)
+			{
+				node.children[i].y = node.y + inter;
+				node.children[i].x = low + cnt1 + winter/2;
+				calc_new_coord(node.children[i], cnt1, winter, inter);
+				cnt1 += winter;
+			}
+	}
+	if (cnt2 != 0)
+	{
+		var winter = width/cnt2;
+		cnt2 = 0;
+		for (var i = 0; i < node.children.length; i++)
+			if (node.children[i].mark == 2)
+			{
+				node.children[i].y = node.y - inter;
+				node.children[i].x = low + cnt2 + winter/2;
+				calc_new_coord(node.children[i], cnt2, winter, inter);
+				cnt2 += winter;
+			}
+	}
+}
+function convert(nodes)
+{
+	var rootnode = null;
+	for (var i = 0; i < nodes.length; i++)
+		if (nodes[i].depth == 0)
+			rootnode = nodes[i];
+	rootnode.x = 300;
+	rootnode.y = 300;
+	calc_new_coord(rootnode, 0, 600, 120);
+}
 
 function update(source,treedata) {
 
   // Compute the new tree layout.
-  var nodes = tree.nodes(source).reverse(),
+  var nodes = tree.nodes(source).reverse();
+  convert(nodes);
 	  links = tree.links(nodes);
 
   // Update the nodes…
@@ -108,32 +187,15 @@ function update(source,treedata) {
   // Enter any new nodes at the parent's previous position.
   var nodeEnter = node.enter().append("g")
 	  .attr("class", "node")
-	  .attr("transform", function(d) { return "translate(" + source.y0 + "," + source.x0 + ")"; })
+	  .attr("transform", function(d) { 
+	  		return "translate(" + d.y + "," + d.x + ")";
+	  })
 	  .on("click", click);
 
   nodeEnter.append("circle")
-	  .attr("r", 1e-6)
+	  .attr("r", 10)
 	  .style("fill", function(d) { return d._children ? "lightsteelblue" : "#fff"; });
-
-  nodeEnter.append("text")
-	  .attr("x", function(d) { return d.children || d._children ? -13 : 13; })
-	  .attr("dy", ".35em")
-	  .attr("text-anchor", function(d) { return d.children || d._children ? "end" : "start"; })
-	  .text(function(d) { return d.name; })
-	  .style("fill-opacity", 1e-6);
-
   // Transition nodes to their new position.
-
-  nodeEnter.selectAll("circle")
-	  .attr("r", function(d){
-	  	if (d.name == "Top Level") return 20; else return 10;
-	  });
-
-  var nodeUpdate = node.transition()
-	  .duration(duration)
-	  .attr("transform", function(d) { return "translate(" + d.y + "," + d.x + ")"; });
-  nodeUpdate.select("text")
-	  .style("fill-opacity", 1);
 
   // Update the links…
   var link = svg.selectAll("path.link")
@@ -142,15 +204,17 @@ function update(source,treedata) {
   // Enter any new links at the parent's previous position.
   link.enter().insert("path", "g")
 	  .attr("class", "link")
-	  .attr("d", function(d) {
-		var o = {x: source.x0, y: source.y0};
-		return diagonal({source: o, target: o});
-	  });
-
-  // Transition links to their new position.
-  link.transition()
-	  .duration(duration)
 	  .attr("d", diagonal);
+  var new_set = new Array();
+  new_set[0]= new Object();
+  new_set[0].x = 300;
+  new_set[0].y = 10; 
+  svg.append("circle")
+  .data(new_set)
+  .attr("cx", function(d){return d.x})
+  .attr("cy", function(d){return d.y})
+  .attr("r",10);
+  // Transition links to their new position.
 
 }
 
