--- a/test.html
+++ b/test.html
@@ -24,7 +24,6 @@
 	.link {
 	  fill: none;
 	  stroke: #ccc;
-	  stroke-width: 2px;
 	}
 	
     </style>
@@ -107,10 +106,10 @@ var tree = d3.layout.tree()
 
 var diagonal = d3.svg.diagonal()
 	.projection(function(d) { return [d.y, d.x]; });
-
-var svg = d3.select("body").append("svg")
+var svgtmp = d3.select("body").append("svg")
 	.attr("width", 800)
 	.attr("height", 800)
+var svg = svgtmp
   	.append("g")
 	.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
@@ -178,8 +177,16 @@ function update(source,treedata) {
   // Compute the new tree layout.
   var nodes = tree.nodes(source).reverse();
   convert(nodes);
-	  links = tree.links(nodes);
+  var links = tree.links(nodes);
 
+  var new_set = new Array();
+  new_set[0]= new Object();
+  new_set[0].x = 300;
+  new_set[0].y = 10; 
+  new_set[1] = new Object();
+  new_set[1].x = 100;
+  new_set[1].y = 300;
+  nodes.push(new_set[0]);
   // Update the nodes…
   var node = svg.selectAll("g.node")
 	  .data(nodes, function(d) { return d.id || (d.id = ++i); });
@@ -204,16 +211,8 @@ function update(source,treedata) {
   // Enter any new links at the parent's previous position.
   link.enter().insert("path", "g")
 	  .attr("class", "link")
-	  .attr("d", diagonal);
-  var new_set = new Array();
-  new_set[0]= new Object();
-  new_set[0].x = 300;
-  new_set[0].y = 10; 
-  svg.append("circle")
-  .data(new_set)
-  .attr("cx", function(d){return d.x})
-  .attr("cy", function(d){return d.y})
-  .attr("r",10);
+	  .attr("d", diagonal)
+	  .attr("stroke-width",5);
   // Transition links to their new position.
 
 }
