--- a/gc.html
+++ b/gc.html
@@ -66,6 +66,9 @@
       </div>
       <div id='current-describe' class = 'current-describe'>
       </div>
+      <a id = 'time-series-super'></a>
+      <p></p>
+      <a id='tr-super'></a>
   	  </div>
       <!-- The right page is the side bar -->
       <div id='right-page'>
