--- a/gc.html
+++ b/gc.html
@@ -75,6 +75,8 @@
       	<div id='search-box'>
 	  <span class='text'><h3>Search Words :</h3>  </span>      	
       	<input id = 'search-word'></input>
+        <datalist id = 'candidate-word'>
+        </datalist>
       	<button onClick="GC.Node.search();">search</button>
       	</div>
 	<div id='right-page-top-box'>
